# medical-billing

./: .gitignore  USER_MANUAL.md  eslint.config.js  index.html  medbill_backup_2026-01-03.json  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
coverage/: coverage-final.json  index.html  index.ts.html
database/: schema.sql
docs/: USER_GUIDE.md
scripts/: create-medicines-bundle.mjs  db-seed.mjs  import-medicines.mjs  migrate_returns_status.sql  test-analytics.ts
src/: App.tsx  index.css  utils.test.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  medicines.rs  print.rs
src/components/common/: Layout.tsx  Pagination.tsx  Toast.tsx
src/pages/: BillHistory.tsx  Billing.tsx  Customers.tsx  Dashboard.tsx  Inventory.tsx  Login.tsx  Purchases.tsx  Reports.tsx  Returns.tsx  RunningBills.tsx  Settings.tsx  SupplierManagement.tsx  index.ts
src/services/: auth.service.ts  backup.service.ts  billing.service.ts  database.ts  gst.service.ts  inventory.service.ts  print.service.ts  report-export.service.ts  seed.ts
src/stores/: index.ts
src/test/: clearDatabase.test.ts  print.service.test.ts  reportExport.service.test.ts  scheduledMedicines.test.ts  scheduledMedicinesReport.test.ts  setup.ts  userManagement.test.ts
src/test/mocks/: tauri-api.ts  tauri-sql.ts
src/types/: index.ts
src/utils/: index.ts
